[package]
name = "sandbox-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "sandbox_anchor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.0"
bincode = "1.3.3"
byteorder = "1.4.3"
serde = { version = "1.0.130", features = ["derive"] }

[dev-dependencies]
libsecp256k1 = "0.5.0"
rand = "0.7"
